<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetSuccessMessage"
    android:padding="30dp"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_message"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/hind_siliguri"
            android:textAllCaps="true"
           android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_message_details"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/hind_siliguri"
            android:textAllCaps="true"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/login_job_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="letTheUserLoggedIn"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
    </LinearLayout>






</LinearLayout>