<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setNewPassword"
    android:padding="30dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password_credentials"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/hind_siliguri"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password_credentials_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/hind_siliguri"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_new_password_job_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint = "@string/set_new_password_credentials"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textColorHint="#33691E"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_set_new_password_job_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint = "@string/set_confirm_password_credentials"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textColorHint="#33691E"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/forget_password_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_new_password_button"
            android:onClick="setNewPassword"
            android:background="#00000000"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>




</ScrollView>