<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fece2f"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="376dp"
            android:layout_height="384dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/images"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Connect_starter"
            android:layout_width="236dp"
            android:layout_height="52dp"
            android:text="@string/tyut_try"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"

            app:layout_constraintTop_toTopOf="@+id/imageView"
             />

        <TextView
            android:id="@+id/Slogan"
            android:layout_width="wrap_content"

            android:layout_height="81dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Job_welcome_inspo"
            android:textColor="@color/black"
            android:textSize="20sp"


            app:layout_constraintTop_toTopOf="@+id/Connect_starter" />

    </LinearLayout>


</ScrollView>